--- a/pilot/HelloWorldTriangle.html
+++ b/pilot/HelloWorldTriangle.html
@@ -7,8 +7,8 @@
         <style>
             body {
                 font-family: system-ui;
-                color: #bdbdff;
-                background-color: rgb(57, 2, 115);
+                color: rgb(57, 2, 115);
+                background-color: rgb(244, 234, 255);
                 text-align: center;
             }
             canvas {
@@ -25,19 +25,6 @@
             <canvas></canvas>
         </div>
         
-        <div id="error">
-            <h2>WebGPU not available</h2>
-            <p>
-                Make sure you are on a system with WebGPU enabled. In
-                Safari, first make sure the Developer Menu is visible (Preferences >
-                Advanced), then Develop > Experimental Features > WebGPU.
-            </p>
-            <p>
-                In addition, you must be using Safari Technology Preview 92 or above.
-                You can get the latest STP <a href="https://developer.apple.com/safari/download/">here</a>.
-            </p>
-        </div>
-
         <script src="scripts/triangle.js"></script>
     </body>
 </html>
