--- a/9.computePilot/HelloWorldRectangle.html
+++ b/9.computePilot/HelloWorldRectangle.html
@@ -24,6 +24,6 @@
             <h4>Render Commands only, no compute commmands</h4>
             <canvas></canvas>
         </div>
-        <script src="scripts/texFromBuff.js"></script>
+        <script src="scripts/computeFill.js"></script>
     </body>
 </html>
